--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bard-ai": "^2.0.3",
+    "bard-api-node": "^1.3.1",
     "express": "^4.18.2"
   }
 }
