--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "axios": "^1.5.0",
     "bard-ai": "^2.0.3",
     "bard-api-node": "^1.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^3.0.1"
   }
 }
