--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
     "axios": "^1.5.0",
     "bard-ai": "^2.0.3",
     "bard-api-node": "^1.3.1",
+    "cheerio": "^1.0.0-rc.12",
     "express": "^4.18.2",
+    "jssoup": "^0.0.15",
+    "lodash": "^4.17.21",
+    "node-summarizer": "^1.0.7",
+    "node-summary": "^1.2.0",
     "nodemon": "^3.0.1"
   }
 }
